# MCP2Lambda

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  smithery.yaml
SampleFunctions/: samconfig.toml
SampleFunctions/customer-id-from-email/: app.py
SampleFunctions/run-python-code/: app.py
mcp_client_bedrock/: README.md  converse_agent.py  converse_tools.py  main.py  mcp_client.py  pyproject.toml
sample_functions/: template.yml
sample_functions/customer-id-from-email/: app.py
sample_functions/customer-info-from-id/: app.py
sample_functions/run-python-code/: app.py
src/: main.py
