[project]
name = "mcp-client-bedrock"
version = "0.1.0"
description = "Sample MCP client implementation for Amazon Bedrock (see https://github.com/mikegc-aws/amazon-bedrock-mcp for more information)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.0",
    "mcp>=1.3.0",
]
